v3/multiple-gws/http-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: httpd-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: httpd
        protocol: HTTP
      hosts:
        - httpd-bookinfo.apps.cluster-dbt7z.dbt7z.sandbox94.opentlc.com
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpd
spec:
  hosts:
    - httpd-bookinfo.apps.cluster-dbt7z.dbt7z.sandbox94.opentlc.com
  gateways:
    - httpd-gateway
  http:
    - route:
        - destination:
            host: httpd.bookinfo.svc.cluster.local
            port:
              number: 8080
